# mind

./: .gitignore  README.md  coverage.xml  pyproject.toml  sonar-project.properties
.github/workflows/: python-app.yml
data/model/: mind.keras
notebooks/: model.ipynb  model2.ipynb  model3.ipynb
src/mind/: __init__.py  __main__.py
src/mind/api/: model_controller.py
src/mind/model/: mind.keras  predictor.py
tests/: empty_test.py
tests/api/: model_controller_test.py  test_model_controller.py
tests/model/: test_predictor.py
