[build-system]
requires = [
    "setuptools >=69.0.0, <70.0.0", 
    "wheel >=0.42.0, <0.43.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "mind"
version = "0.1.0"
requires-python = ">=3.8, <3.12"
readme = "README.md"
dependencies = [
    "fastapi ==0.105.0",
    "keras ==2.15.0",
    "numpy ==1.26.2",
    "opencv-python-headless ==4.9.0.80",
    "python-multipart ==0.0.6",
    "tensorflow[and-cuda] ==2.15.0.post1",
    "uvicorn[standard] ==0.25.0",
]

[project.optional-dependencies]
dev = [
    "build ==1.0.3",
    "coverage ==7.4.0",
]
notebook = [
    "dill ==0.3.7",
    "ipykernel ==6.28.0",
    "keras-tuner ==1.4.6",
    "matplotlib ==3.8.2",
    "pandas ==2.1.4",
    "scikit-learn ==1.3.2",
]
all = ["mind[dev, notebook]"]

[project.scripts]
mind = "mind:start_server"

[tool.setuptools.package-data]
"mind.model" = ["mind.keras"]